chore: clean up it-module pom